--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "@auth0/angular-jwt": "^5.0.2",
         "@angular/platform-browser": "~11.0.0",
         "@angular/platform-browser-dynamic": "~11.0.0",
+        "@angular/service-worker": "~11.0.0",
         "@angular/router": "~11.0.0",
         "@fullcalendar/core": "4.1.0",
         "@fullcalendar/daygrid": "4.1.0",
